RESOLVED FIXED216008
Wheel event region code is not fully disabled
https://bugs.webkit.org/show_bug.cgi?id=216008
Summary Wheel event region code is not fully disabled
Antti Koivisto
Reported 2020-08-31 10:53:29 PDT
The code was disabled in r265823 but wheel events still cause us to create unnecessary main frame event region and traverse deep.
Attachments
patch (2.35 KB, patch)
2020-08-31 10:58 PDT, Antti Koivisto
no flags
Radar WebKit Bug Importer
Comment 1 2020-08-31 10:53:54 PDT
Antti Koivisto
Comment 2 2020-08-31 10:58:52 PDT
EWS
Comment 3 2020-08-31 11:51:41 PDT
Committed r266363: <https://trac.webkit.org/changeset/266363> All reviewed patches have been landed. Closing bug and clearing flags on attachment 407611 [details].
Note You need to log in before you can comment on or make changes to this bug.