Wheel event region code is not fully disabled https://bugs.webkit.org/show_bug.cgi?id=216008 <rdar://problem/68086333>

Reviewed by Simon Fraser.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::paintObject):
* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::maintainsEventRegion const):

Use the relevant ENABLE flag rather than !PLATFORM_IOS to compile out the code.


Canonical link: https://commits.webkit.org/228799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266363 268f45cc-cd09-0410-ab3c-d52691b4dbfc